Initial commit: backend and frontend